--- a/data/init/drivnal.conf
+++ b/data/init/drivnal.conf
@@ -5,4 +5,4 @@ stop on runlevel [!2345]
 
 respawn
 
-exec drivnal --pidfile /var/run/drivnal.pid
+exec %PREFIX%/bin/drivnal --pidfile /var/run/drivnal.pid
