--- a/www/package.json
+++ b/www/package.json
@@ -1,13 +1,12 @@
 {
   "name": "drivnal.js",
-  "version": "0.1.0",
   "dependencies": {
-    "grunt": ">=0.4.0rc8",
-    "grunt-contrib-clean": ">=0.4.0rc6",
-    "grunt-contrib-copy": ">=0.4.0rc7",
-    "grunt-contrib-jshint": ">=0.1.1rc6",
-    "grunt-contrib-less": ">=0.5.0rc7",
-    "grunt-contrib-requirejs": ">=0.4.0rc7",
-    "grunt-exec": ">=0.4.0rc1"
+    "grunt": ">=0.4.1",
+    "grunt-contrib-clean": ">=0.5.0",
+    "grunt-contrib-copy": ">=0.4.1",
+    "grunt-contrib-jshint": ">=0.6.0",
+    "grunt-contrib-less": ">=0.6.4",
+    "grunt-contrib-requirejs": ">=0.4.1",
+    "grunt-exec": ">=0.4.2"
   }
 }
