Finish debian files

--- a/debian/rules
+++ b/debian/rules
@@ -1,16 +1,4 @@
 #!/usr/bin/make -f
 
-export PYTHONPATH=$(CURDIR)
-
 %:
-    dh $@ --buildsystem python_distutils --with python2
-
-build:
-    dh build
-ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
-    make test
-endif
-
-clean:
-    dh clean
-    rm -rf drivnal.egg-info/ build
+	dh $@ --with python2 --buildsystem=python_distutils
