--- a/debian/control
+++ b/debian/control
@@ -5,13 +5,14 @@ Maintainer: Zachary Huff <zach.huff.386@gmail.com>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.4
 Homepage: http://drivnal.com/
+X-Python-Version: >= 2.7
 #Vcs-Git: https://github.com/drivnal/drivnal.git
 #Vcs-Browser: https://github.com/drivnal/drivnal
 
 Package: drivnal
 Architecture: any
 Depends: python-flask,
-         python-cherrypy,
+         python-cherrypy3,
          rsync,
          ${misc:Depends},
          ${python:Depends}
