--- a/vagrantfile
+++ b/vagrantfile
@@ -6,5 +6,8 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "precise64"
   config.vm.provision :shell, :path => "tools/vagrant_provision.sh"
-  config.vm.network :forwarded_port, host: 6500, guest: 6500
+  config.vm.network :forwarded_port, guest: 6500, host: 6500,
+    auto_correct: true
+  config.vm.network :forwarded_port, guest: 80, host: 8080,
+    auto_correct: true
 end
