Enable scheduler in vagrant conf

--- a/tools/vagrant_volume.conf
+++ b/tools/vagrant_volume.conf
@@ -3,6 +3,6 @@ excludes=/vagrant
 id=af9d03d0038d11e38d68080027880ca6
 min_free_space=0.1
 name=Root Backup
-schedule=1day
+schedule=none
 snapshot_limit=300
 source_path=/
