--- a/vagrantfile
+++ b/vagrantfile
@@ -10,4 +10,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     auto_correct: true
   config.vm.network :forwarded_port, guest: 80, host: 8080,
     auto_correct: true
+
+  config.vm.define :testing
+
+  config.vm.define :stress do |stress|
+    stress.vm.provision :shell, :path => "tools/vagrant_stress_provision.sh"
+  end
 end
