Increase memory for stress testing vm

--- a/vagrantfile
+++ b/vagrantfile
@@ -14,6 +14,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define :testing
 
   config.vm.define :stress do |stress|
+    config.vm.provider "virtualbox" do |v|
+      v.customize ["modifyvm", :id, "--memory", "1024"]
+    end
+
     stress.vm.provision :shell, :path => "tools/vagrant_stress_provision.sh"
   end
 end
