--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@ Icon?
 ehthumbs.db
 Thumbs.db
 *.pyc
+*.egg
+*.egg-info
+__pycache__
 /.vagrant
 /build
 /dist
-/drivnal.egg-info
 /drivnal.db
 /www/node_modules
 /tools/private_key.asc
