Fix debian control

--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,10 @@ Section: utils
 Priority: optional
 Maintainer: Zachary Huff <zach.huff.386@gmail.com>
 Build-Depends: debhelper (>= 8.0.0),
-               python-all (>= 2.6.6-3),
-               python-setuptools (>= 0.6b3)
+               python-all (>= 2.7),
+               python-setuptools (>= 0.6b3),
+               python-flask,
+               python-cherrypy3
 Standards-Version: 3.9.4
 Homepage: http://drivnal.com/
 X-Python-Version: >= 2.7
