--- a/data/etc/drivnal.conf
+++ b/data/etc/drivnal.conf
@@ -3,5 +3,6 @@ log_debug=false
 scheduler=true
 bind_addr=127.0.0.1
 port=6500
+data_path=/var/lib/drivnal
 db_path=/var/lib/drivnal/drivnal.db
 log_path=/var/log/drivnal.log
