--- a/tools/vagrant_drivnal.conf
+++ b/tools/vagrant_drivnal.conf
@@ -3,5 +3,6 @@ log_debug=false
 scheduler=true
 bind_addr=0.0.0.0
 port=6500
+data_path=/var/lib/drivnal
 db_path=/var/lib/drivnal/drivnal.db
 www_path=./www
