--- a/arch/PKGBUILD
+++ b/arch/PKGBUILD
@@ -35,6 +35,6 @@ build() {
 
 package() {
     cd "${srcdir}/${pkgname}-${pkgver}"
-    mkdir -p "${pkgdir}/var/lib/drivnal"
+    mkdir -p "${pkgdir}/var/lib/${pkgname}"
     python2 setup.py install --root="${pkgdir}" --prefix=/usr --no-upstart
 }
